# illuminator

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
src/: backend.rs  brightness.rs  cli.yml  i2c.rs  intel.rs  location.rs  main.rs
