[package]
name = "illuminator"
version = "0.1.0"
authors = ["Lyndon Sanche <lsanche@lyndeno.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddc-i2c = {version = "^0.2.1", features = ["with-linux"]}
ddc = "^0.2.2"
sunrise = "^1.0.0"
chrono = "^0.4"
clap = {version = "2.33.3", features = ["yaml"]}